# Zuker

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  energy.cpp  energy.h  main.cc  rna_seq.cpp  rna_seq.h  traceback.cpp  traceback.h  zuker.cpp  zuker.h
test/: CMakeLists.txt  buf.cpp  test_energy.cpp  test_zuker.cpp
